syntax = "proto3";

option csharp_namespace = "GrpcStudentsServer";

package greet;

// The student service definition.
service StudentRemote {
  rpc GetStudentInfo (StudentLookupModel) returns (StudentModel);
  rpc InsertStudent (StudentModel) returns (Reply);
  rpc UpdateStudent (StudentModel) returns (Reply);
  rpc DeleteStudent (StudentLookupModel) returns (Reply);
  rpc RetrieveAllStudents (Empty) returns (StudentList);
}

message Reply {
	string result = 1;
	bool isOk = 2;
}

message Empty {}

// The request message 
message StudentLookupModel {
  int32 studentId = 1;
}

// The response message 
message StudentModel {
  int32 studentId = 1;
  string firstName = 2;
  string lastName = 3;
  string school = 4;
}

message StudentList
{
   repeated StudentModel items = 1; 
}
